# PersonalTrade

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 21bf011bc093_add_kill_switch_state_table.py  75d3cb675810_add_instrument_name_and_news_instrument_.py  8d1826978b1c_add_paper_account_table.py  a89d90acf864_add_trade_realized_pnl_and_executed_at_.py  b5bb1075a581_initial_schema.py  c3f5a1d8e2b4_add_upstox_tokens_table.py  f1a2b3c4d5e6_add_soak_periods_table.py
config/: default.yaml  nse_holidays.yaml
docs/: ROADMAP.md
docs/architecture/: 01-system-architecture.md  02-data-model.md  03-interfaces.md  04-trade-lifecycle.md  05-ai-data-flow.md  06-config-security-ops.md  ADRS.md
docs/operations/: soak-checklist.md
src/personaltrade/: __init__.py  cli.py
src/personaltrade/analytics/: __init__.py  journal.py  pnl.py  reports.py  soak.py
src/personaltrade/api/: __init__.py  app.py  auth.py  deps.py  viewmodels.py
src/personaltrade/api/routes/: api.py  pages.py  ws.py
src/personaltrade/api/static/: app.js  style.css
src/personaltrade/api/templates/: base.html  journal.html  login.html  overview.html  recommendations.html  reports.html
src/personaltrade/backtest/: __init__.py  costs.py  engine.py  indicator_bridge.py  metrics.py  run.py  sizing.py  sweep.py
src/personaltrade/core/: __init__.py  calendar.py  clock.py  config.py  enums.py  errors.py  events.py  logging.py
src/personaltrade/data/: __init__.py
src/personaltrade/data/historical/: __init__.py  adjust.py  quality.py  sync.py
src/personaltrade/data/live/: __init__.py  aggregator.py  feed.py  staleness.py
src/personaltrade/data/providers/: __init__.py  base.py  reconnect.py  upstox.py
src/personaltrade/data/providers/proto/: __init__.py  market_data_feed_v3.proto  market_data_feed_v3_pb2.py  market_data_feed_v3_pb2.pyi
src/personaltrade/data/store/: __init__.py  candles.py  db.py  models.py  repos.py  types.py
src/personaltrade/execution/: __init__.py  broker.py
src/personaltrade/execution/paper/: __init__.py  broker.py  quotes.py
src/personaltrade/execution/upstox/: __init__.py  auth.py  broker.py  crypto.py
src/personaltrade/indicators/: __init__.py  batch.py  streaming.py
src/personaltrade/intelligence/: __init__.py
src/personaltrade/intelligence/analysis/: prompt.py  schema.py  service.py  snapshot.py
src/personaltrade/intelligence/llm/: anthropic_provider.py  provider.py
src/personaltrade/intelligence/news/: __init__.py  pipeline.py  provider.py  rss.py  sanitize.py  tagging.py
src/personaltrade/intelligence/recommendation/: __init__.py  engine.py  merge.py  screener.py
src/personaltrade/orchestrator/: __init__.py  candle_buffer.py  indicator_bridge.py  reconcile.py  runner.py  scheduler.py  service.py
src/personaltrade/risk/: __init__.py  engine.py  kill_switch.py  limits.py  sizing.py
src/personaltrade/strategy/: __init__.py  base.py  examples.py  registry.py
src/personaltrade/strategy/strategies/: __init__.py  ema_atr_stop.py  rsi_mean_reversion.py  sma_crossover.py
tests/: conftest.py  factories.py  reference.py  test_adjust.py  test_analytics_journal.py  test_analytics_pnl.py  test_analytics_reports.py  test_analytics_soak.py  test_api_dashboard.py  test_backtest_costs.py  test_backtest_engine.py  test_backtest_indicator_bridge.py  test_backtest_metrics.py  test_backtest_run.py  test_backtest_sizing.py  test_backtest_sweep.py  test_calendar.py  test_candle_store.py  test_cli.py  test_config.py  test_core_clock.py  test_core_events.py  test_data_live_aggregator.py  test_data_live_feed.py  test_data_live_staleness.py  test_data_providers_reconnect.py  test_e2e_dashboard.py  test_e2e_paper_soak.py  test_execution_paper_broker.py  test_execution_paper_live_quotes.py  test_execution_paper_quotes.py  test_execution_upstox_auth.py  test_execution_upstox_broker.py  test_execution_upstox_crypto.py  test_indicators_batch.py  test_indicators_golden.py  test_indicators_streaming.py  test_indicators_supertrend.py  test_intelligence_analysis_prompt.py  test_intelligence_analysis_schema.py  (+31 more)
tests/golden/: generate_indicators_golden.py  reliance_daily_indicators.csv
