[project]
name = "personaltrade"
version = "0.1.0"
description = "Personal AI trading research & execution platform for Indian markets (NSE via Upstox)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "apscheduler>=3.11.3",
    "duckdb>=1.0",
    "feedparser>=6.0.12",
    "httpx>=0.27",
    "pandas>=2.2",
    "protobuf>=5.27",
    "pyarrow>=17",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "pytz>=2026.2",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0",
    "structlog>=24.4",
    "typer>=0.12",
    "websockets>=13.0",
]

[project.scripts]
pt = "personaltrade.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML",
    "pandas-stubs>=3.0.3.260530",
    "grpcio-tools>=1.65",
    "types-protobuf>=5.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/personaltrade"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Generated protobuf codegen (grpc_tools.protoc) — not hand-written, not
# linted/formatted; regenerating overwrites any fixes anyway.
extend-exclude = ["src/personaltrade/data/providers/proto/market_data_feed_v3_pb2.py", "src/personaltrade/data/providers/proto/market_data_feed_v3_pb2.pyi"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

# Generated protobuf stubs (grpc_tools.protoc codegen) — not hand-written, not
# held to strict standards; regenerating overwrites any fixes anyway. See
# data/live/proto/__init__.py for provenance/regeneration instructions.
[[tool.mypy.overrides]]
module = "personaltrade.data.providers.proto.market_data_feed_v3_pb2"
ignore_errors = true

# apscheduler ships no py.typed marker / stubs, and no types-apscheduler
# package exists to install (ROADMAP M11).
[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

# feedparser ships no py.typed marker / stubs, and no types-feedparser
# package exists to install (ROADMAP M13).
[[tool.mypy.overrides]]
module = "feedparser"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
